# pugb

app/: .env  App.tsx  Providers.tsx  Pugb.tsx  app.json  babel.config.js  metro.config.js  package-lock.json  package.json  tamagui.config.ts
app/app/: Index.tsx  [...unmatched].tsx  _layout.tsx  index.tsx
app/app/camera/: [id].tsx  index.tsx
app/app/game/: [id].tsx  index.tsx
app/app/select/: index.tsx
app/components/: KillFeed.tsx
app/lib/: mock.ts  store.ts  types.ts
server/: .gitignore  Cargo.toml
server/src/: actor.rs  discord.rs  error.rs  main.rs  models.rs  webserver.rs
server/src/webserver/: auth.rs  shoot.rs
