[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
async-session = "3.0.0"
async-stream = "0.3.5"
axum = { version = "0.6.20", features = ["headers", "multipart"] }
dotenv = "0.15.0"
futures = "0.3.28"
http = "0.2"
oauth2 = "4.1"
# Use Rustls because it makes it easier to cross-compile on CI
reqwest = { version = "0.11", default-features = false, features = [
    "rustls-tls",
    "json",
] }
serde = { version = "1.0", features = ["derive"] }
serenity = { version = "0.11.6", default-features = false, features = [
    "client",
    "gateway",
    "rustls_backend",
    "model",
] }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.4.0", features = ["fs", "trace"] }
tower-cookies = "0.9.0"
strum_macros = "0.24"
serde_json = "1"
serde_with = "3"
uuid = {version = "1", features = ["v4","fast-rng",]}
num_enum = "0.7.0"
tokio-util = { version = "0.7", features = ["io"] }

[env]
RUST_BACKTRACE = "0"
